feat: formatações de retorno apenas com dados necessarios, e ajuste de função de data
